# remote-drive-client

./: CLAUDE.md  Cargo.toml  README.md
docs/: OPTIMIZATION_PLAN.md  ZERO_COPY_PLAN.md
src/: main.rs  main_zero_copy.rs
